# fetch-my-repos

./: Cargo.toml  Makefile  Readme.org  gclone.sh
src/: config.rs  io.rs  main.rs  repo_list.rs
src/integration/: bitbucket.rs  common.rs  github.rs  gitlab.rs
