[package]
name = "gclone-fetch"
version = "0.0.1"
authors = ["Jakub Darul"]
edition = "2018"


[dependencies]
reqwest = "0.9.24"
quicli = "0.4.0"
structopt = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
